2013-01-13 Raphael Neider <rneider AT web.de>

	* src/pic14/gen.c (genDataPointerSet): 
	  fix and simplify operand size detection, fixes #3600361
	* src/pic14/main.c (keywords[]):
	  remove unsupported "pdata", fixes #3600724

2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: Canceled the command option: --create-sfr16
	* device/non-free/include/pic16/pic18*.h,
	  device/non-free/lib/pic16/libdev/pic18*.c: Canceled the __sfr16 type.

2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --assembly-source

2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: New command option: --create-sfr16
	  (This option is for the time being operates only at the pic16 series.)
	* device/non-free/include/pic16/pic18*.h,
	  device/non-free/lib/pic16/libdev/pic18*.c: Implementation of the __sfr16 type.

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --no-explanations

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --hex-constant

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Faster the decoding of instructions.

2013-01-11 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: More control characters are recognized.
	  Refinement the align of explanations.

2013-01-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c: Nearly exact instruction sizes for peephole
	  branch optimizations.

2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genSend): "fix" for bug #3600343

2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Simplified the code.

2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* doc/sdccman.lyx: Expanded the 6.2 (Tools) table.
